src/objects/Action_Plan_Objective__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Goal__c</fullName>
        <label>Action Plan Goal</label>
        <referenceTo>Action_Plan_Goal__c</referenceTo>
        <relationshipLabel>Action Plan Objectives</relationshipLabel>
        <relationshipName>Action_Plan_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Former_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Former ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_ObjectiveID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Objective from original Plan before migration to Action Plan</description>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Action Plan Objectives</relationshipLabel>
        <relationshipName>Action_Plan_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <label>ReferenceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Ended Prior to Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Behavior - Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior - Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narrative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Plan Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Former_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action_Plan_Goal__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APO-{00000}</displayFormat>
        <label>Action Plan Objective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Description_Req</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Status__c) != &apos;N/A&apos; &amp;&amp; ISBlank(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_b4_plan_effective_date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &lt; Action_Plan_Goal__r.Action_Plan__r.Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date must be on or after the Action Plan Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_req</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Effective_Date__c ) &amp;&amp;  ($User.Operating_Group__c == &apos;Redwood&apos; || $User.Operating_Group__c == &apos;Care Meridian&apos;) &amp;&amp; !ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Req</fullName>
        <active>true</active>
        <errorConditionFormula>ISblank(TEXT(Status__c)) &amp;&amp;   ($User.Operating_Group__c == &apos;Redwood&apos; || $User.Operating_Group__c == &apos;Care Meridian&apos;) &amp;&amp; !ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Req_CB</fullName>
        <active>true</active>
        <errorConditionFormula>ISblank(TEXT(Status__c)) &amp;&amp;  $User.Operating_Group__c == &apos;Cambridge&apos; &amp;&amp; !ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TargetDate_before_EfftiveDate</fullName>
        <active>true</active>
        <errorConditionFormula>Target_End_Date__c &lt;= Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Target_End_Date__c</errorDisplayField>
        <errorMessage>Target Date must be after Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_b4_plan_effective_date</fullName>
        <active>true</active>
        <errorConditionFormula>Target_End_Date__c  &gt; Action_Plan_Goal__r.Action_Plan__r.Target_Date__c</errorConditionFormula>
        <errorDisplayField>Target_End_Date__c</errorDisplayField>
        <errorMessage>Target Date must be on or before the Action Plan Target Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_req</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Target_End_Date__c ) &amp;&amp;   ($User.Operating_Group__c == &apos;Redwood&apos; || $User.Operating_Group__c == &apos;Care Meridian&apos;) &amp;&amp; !ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Target_End_Date__c</errorDisplayField>
        <errorMessage>Target Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Req</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) != &apos;N/A&apos; &amp;&amp; 
ISBlank(TEXT(Type__c))&amp;&amp;   
!ISBLANK(Description__c) &amp;&amp;
($User.Operating_Group__c == &apos;Redwood&apos; || $User.Operating_Group__c == &apos;Care Meridian&apos;) &amp;&amp; 
Action_Plan_Goal__r.Action_Plan__r.Service_Assignment__r.Service_Location__r.ProgramID__c != &apos;114165002&apos;</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Type is required</errorMessage>
    </validationRules>
</CustomObject>